--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     color: white;
 }
 
-#pop {
+#popOrTop {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,15 +15,8 @@
     margin-top: 568px;
 }
 
-#top {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin:50px;
 
-}
-
-#topH1 {
+.topH1 {
     background-color: red;
     padding-left: 500px;
     padding-right: 500px;
@@ -36,24 +29,27 @@
     flex-direction: column;
     align-items: center;
     float: center;
- 
+    margin: 20px;
 
 
 }
 
-.test {
-    margin: 5px;
+
+
+.redBorder {
+    border: 2px solid red;
+
 }
 
-.blueBorder {
-    border: 2px solid blue;
-    
-}
-
-#nameForm {
+nav {
     display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+    align-items: center;
+    justify-content: space-around;
+    background-color: red;
+    padding: 5px;
+     border-radius: 5px;
+     padding-bottom: 30px;
+
 }
 
 
@@ -67,7 +63,7 @@
     max-width: 1100px;
     position: relative;
     margin: auto;
- 
+
 }
 
 /* Hide the images by default */
@@ -130,17 +126,6 @@
     top: 0;
 }
 
-/* The dots/bullets/indicators */
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
 
 .active,
 .dot:hover {
